--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@
 
  .page-header {
      border-bottom: 1px solid #e7e9fc;
+     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
  }
 
  .header-container {
@@ -88,10 +89,31 @@
      line-height: 1.5;
      letter-spacing: 0.02em;
      color: #2e2f42;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
+ .nav-link.current {
+     position: relative;
+ }
+
+ .nav-link.current::after {
+     content: "";
+     background-color: #404bbf;
+     border-radius: 4px;
+     position: absolute;
+     left: 0;
+     bottom: -1px;
+     width: 100%;
+     height: 4px;
+ }
+
+
+
  .nav-link:hover,
- .nav-link:focus {
+ .nav-link:focus,
+ .contacts-link:hover,
+ .contacts-link:focus,
+ .nav-link.current {
      color: #404bbf;
  }
 
@@ -101,8 +123,7 @@
      gap: 40px;
  }
 
- .contacts-link:hover,
- .contacts-link:focus {
+     {
      color: #404bbf;
  }
 
@@ -118,6 +139,7 @@
      line-height: 1.5;
      letter-spacing: 0.02em;
      color: #434455;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  }
 
@@ -134,12 +156,7 @@
  }
 
 
- /* .hero-wrap { */
- /* display: flex; */
- /* align-items: center; */
- /* flex-direction: column; */
- /* box-sizing: border-box; */
- /* } */
+
 
 
  .hero-title {
