--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@
  .nav-link.current::after {
      content: "";
      background-color: #404bbf;
-     border-radius: 4px;
+     border-radius: 2px;
      position: absolute;
      left: 0;
      bottom: -1px;
@@ -153,6 +153,12 @@
      padding-top: 188px;
      padding-bottom: 188px;
      margin: 0 auto;
+     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
+
+     max-width: 1440px;
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
  }
 
 
@@ -187,6 +193,7 @@
      min-width: 169px;
      height: 56px;
      border: none;
+     transition: background-color:250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .hero-btn:hover,
