--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,17 @@
      color: #434455;
  }
 
+ .icons-feature {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 112px;
+     background-color: #f4f4fd;
+     border-radius: 4px;
+     border: 1px solid #8e8f99;
+     margin-bottom: 8px;
+ }
+
 
  .team {
      border: 1px solid #e7e9fc;
