--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@
      min-width: 169px;
      height: 56px;
      border: none;
-     transition: background-color:250ms cubic-bezier(0.4, 0, 0.2, 1);
+     transition: background-color 250ms cubic-bezier (0.4, 0, 0.2, 1);
  }
 
  .hero-btn:hover,
@@ -328,6 +328,55 @@
  .wrap-team {
      padding: 32px 0px;
  }
+
+ .icons-team {
+     margin-top: 8px;
+ }
+
+ .icons-list {
+     display: flex;
+     justify-content: center;
+     gap: 24px;
+ }
+
+ .social-icons {
+     width: 40px;
+     height: 40px;
+
+ }
+
+ .social-link {
+     border-radius: 50%;
+     background-color: #4d5ae5;
+     width: 100%;
+     height: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+
+ .social-link:hover,
+ .social-link:focus {
+     background-color: #404bbf;
+ }
+
+ .instagram {
+     fill: #f4f4fd;
+ }
+
+ .twitter {
+     fill: #f4f4fd;
+ }
+
+ .facebook {
+     fill: #f4f4fd;
+ }
+
+ .linkedin {
+     fill: #f4f4fd;
+ }
+
+
 
  .portfolio {
      background-color: #fff;
