--- a/css/styles.css
+++ b/css/styles.css
@@ -293,12 +293,16 @@
      align-items: center;
      margin: 0 auto;
      gap: 24px;
+
  }
 
  .team-item {
      background-color: #FFFFFF;
      border-radius: 0 0 4px 4px;
-     width: calc((100% - 3 * 24px) / 4)
+     width: calc((100% - 3 * 24px) / 4);
+     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+         0px 1px 1px rgba(46, 47, 66, 0.16),
+         0px 2px 1px rgba(46, 47, 66, 0.08);
  }
 
  .team-image {
@@ -327,19 +331,16 @@
 
  .wrap-team {
      padding: 32px 0px;
-     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-         0px 1px 1px rgba(46, 47, 66, 0.16),
-         0px 2px 1px rgba(46, 47, 66, 0.08);
+
  }
 
- .icons-team {
-     margin-top: 8px;
- }
+
 
  .icons-list {
      display: flex;
      justify-content: center;
      gap: 24px;
+     margin-top: 8px;
  }
 
  .social-icons {
