--- a/css/styles.css
+++ b/css/styles.css
@@ -121,9 +121,6 @@
      display: flex;
      align-items: center;
      gap: 40px;
- }
-
-     {
      color: #404bbf;
  }
 
@@ -346,7 +343,7 @@
  .social-icons {
      width: 40px;
      height: 40px;
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
  }
 
@@ -358,6 +355,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .social-link:hover,
@@ -395,7 +393,9 @@
 
  .portfolio-item {
      width: calc((100% - 48px) / 3);
+     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+
 
  .portfolio-image {
      display: block;
@@ -423,6 +423,9 @@
      border-top: none;
  }
 
+
+
+
  .cover-text {
      position: absolute;
      top: 0;
@@ -436,10 +439,20 @@
      overflow: auto;
      padding: 40px 32px;
      letter-spacing: 0.02em;
+     line-height: 1.5;
  }
 
  .portfolio-item:hover .cover-text {
      transform: translateY(0);
+ }
+
+ .portfolio-item:hover {
+     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+         0px 1px 1px rgba(46, 47, 66, 0.16),
+         0px 2px 1px rgba(46, 47, 66, 0.08);
+ }
+
+ .wrap-portfoli.o:hover {
      box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
  }
 
@@ -450,6 +463,11 @@
 
  .page-footer {
      padding: 100px 0;
+
+ }
+
+ .wrap-footer {
+     display: flex;
  }
 
  .footer-text {
@@ -464,3 +482,18 @@
      display: inline-block;
      margin-bottom: 16px;
  }
+
+ .footer-title {
+     font-weight: 500;
+     font-size: 16px;
+     letter-spacing: 0.2em;
+     line-height: 1.5;
+     color: #FFFFFF;
+     margin-bottom: 16px;
+ }
+
+ .wrap-logo-footer {
+     margin-right: 120px;
+ }
+
+ .footer-social {}
