--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@
  .footer-title {
      font-weight: 500;
      font-size: 16px;
-     letter-spacing: 0.2em;
+     letter-spacing: 0.02em;
      line-height: 1.5;
      color: #FFFFFF;
      margin-bottom: 16px;
@@ -497,3 +497,26 @@
  }
 
  .footer-social {}
+
+ .icons-list-footer {
+     display: flex;
+     justify-content: center;
+     gap: 16px;
+     margin-top: 8px;
+ }
+
+ .social-link-footer {
+     border-radius: 50%;
+     background-color: #4d5ae5;
+     width: 100%;
+     height: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .social-link-footer:hover,
+ .social-link-footer:focus {
+     background-color: #31d0aa;
+ }
